--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Pixel Drawing</title>
-<script type="text/javascript" src="drawstuff.js"></script>
+<script type="text/javascript" src="triangleRender.js"></script>
 </head>
-<body onload="main();">
+<body style="background-color:black" onload="main();">
 <canvas id="viewport" width="512" height="512"></canvas>
 </body>
 </html>
