--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Pixel Drawing</title>
 <script type="text/javascript" src="triangleRender.js"></script>
 </head>
-<body style="background-color:black" onload="main();">
-<canvas id="viewport" width="512" height="512"></canvas>
+<body style="background-color:#111111; display: flex; justify-content: center; align-items: center; height: 100vh;" onload="main();">
+<canvas style="background-color:black" id="viewport" width="512" height="512"></canvas>
 </body>
 </html>
