Fixed Triangle REndering and added sphere rendering

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Pixel Drawing</title>
-<script type="text/javascript" src="triangleRender.js"></script>
+<!-- <script type="text/javascript" src="sphereRender.js"></script> -->
+<script type="text/javascript" src="./triangleRender.js"></script>
 </head>
-<body style="background-color:#111111; display: flex; justify-content: center; align-items: center; height: 100vh;" onload="main();">
+<body style="background-color:#111111; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;" onload="main();">
 <canvas style="background-color:black" id="viewport" width="512" height="512"></canvas>
 </body>
 </html>
